# ja_mnemonic

./: README.md  conversion.py  coverage.py  credits.txt  pyproject.toml  repl.py
data/: parse_jmdict.sh  wikidata_queries.sql
src/data/: jmnedict_xml_parser.py  wiki_names_cleanup.py
src/mnemonic/: conversion.py  coverage.py  kana_mapper.py  loaders.py  repl.py  tenkeydict.py
src/romaji/: romaji_converter.py
src/server/: main.py
tests/: test_romaji_converter.py
