[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ja_mnemonic"
version = "0.0.1"
authors = [
  { name="Joshua Coates", email="me@jcoat.es" },
]
description = "Build japanese mnemonics for numbers."
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mnemonic", "src/romaji"]
