[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ja_mnemonic"
version = "0.0.2"
authors = [
  { name="Joshua Coates", email="me@jcoat.es" },
]
description = "Build japanese mnemonics for numbers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server=["fastapi ~= 0.112"]
test=["pytest ~= 8.3"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mnemonic", "src/romaji"]
